# orchids-challenge

./: README.md  project-viewer.html
backend/: .env.example  enhanced_website_generator.py  pyproject.toml  requirements.txt  setup.py
backend/app/: bedrock_generator.py  main.py  models.py  openai_generator.py  scraper.py
backend/app/multi_agent/: README.md  __init__.py  service.py
backend/app/multi_agent/agents/: __init__.py  base_agent.py  component_synthesizer_agent.py  layout_generator_agent.py  scraper_agent.py  semantic_parser_agent.py  style_transfer_agent.py  validation_agent.py
backend/app/multi_agent/workflow/: __init__.py  agent_factory.py  models.py  orchestrator.py
frontend/src/app/: page.tsx
frontend/src/app/components/: ApiKeyConfig.tsx  GenerationPreview.tsx  OutputGallery.tsx  ProcessingStatus.tsx
